<resources>
    <string name="app_name">Library App</string>
    <string name="readopia_app_name">LIBRARY APP</string>
    <string name="button">Button</string>
    <string name="book_name">Book Name</string>
    <string name="read_button">Read</string>
    <string name="download_count">Download Count</string>
    <string name="download_count_label">Download Count</string>
    <string name="languages_label">Languages</string>
    <string name="languages">Languages</string>
    <string name="copyright_label">Copyright</string>
    <string name="content">Content</string>
    <string name="bookshelves">Bookshelves</string>
    <string name="author_name">Author</string>
    <string name="book_detail_continue_button_text">Continue Reading</string>
    <string name="your_total_readings">Your total readings: %1$s</string>
    <string name="okay">Okay</string>
    <string name="unknown_author">Unknown Author</string>
    <string name="this_book_has_no_bookshelf">This Book Has No Bookshelf</string>
    <string name="there_is_no_reading_page">There is no reading page.</string>
    <string name="ai_book_preferences">Your Book Preferences</string>
    <string name="ai_your_interests">Your Interests</string>
    <string name="ai_last_read_book">The last book you read</string>
    <string name="ai_show_recommendations">Show Recommendations</string>
    <string name="search_hint">Search for a book or author...</string>
    <string name="search_empty_text">No results found</string>
    <string name="reading_count_label">Read Books</string>
    <string name="favorite_count_label">Favorites</string>
    <string name="no_books_found">No books found yet</string>
    <string name="interests">Your Interests</string>
    <string name="reading_speed">Your Reading Speed</string>
    <string name="favorite_books_hint">Books you recently read and liked</string>
    <string name="get_recommendations">Show Book Recommendations</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="save_book">Save</string>
    <string name="remove_saved_book">Remove from Saved</string>
    <string name="saved_books_label">Saved Books</string>
    <string name="reading_purpose">What kind of books do you want to read?</string>
    <string name="favorite_genres">Which genres do you prefer?</string>
    <string name="mood_light">Fun and light</string>
    <string name="mood_thought">Thought-provoking</string>
    <string name="mood_relaxing">Relaxing</string>
    <string name="preferred_mood">What kind of book are you looking for?</string>
    <string name="read_books_label">Books Read</string>
    <string name="profile_photo_prompt">Profile photo</string>
    <string name="profile_photo_gallery">Gallery</string>
    <string name="profile_photo_camera">Camera</string>
    <string name="profile_photo_permission_denied">Camera permission is required to take a photo.</string>
    <string name="profile_photo_save_failed">Could not save the image.</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="shelf_header_my_favourite">My Favourite</string>
    <string name="shelf_header_books">BOOKS</string>
    <string name="category_others">Others</string>
    <string name="view_books">View Books</string>
    <string name="books_count_format">%1$d books</string>
    <string name="shelf_title_fiction">Fiction</string>
    <string name="shelf_title_design">Design</string>
    <string name="shelf_title_psychology">Psychology</string>
    <string name="shelf_title_history">History</string>
    <string name="shelf_title_science">Science</string>
    <string name="shelf_title_romance">Romance</string>
    <string name="shelf_title_biography">Biography</string>
    <string name="shelf_title_art">Art</string>
    <string name="shelf_title_business">Business</string>
    <string name="shelf_title_fantasy">Fantasy</string>
    <string name="shelf_title_mystery">Mystery</string>
    <string name="shelf_title_poetry">Poetry</string>
    <string name="shelf_title_religion">Religion</string>
</resources>
