<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBackgroundLight"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"
            app:navigationIcon="@drawable/ic_arrow_back_white" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorButton"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/image_view_book_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            android:scaleType="centerCrop"
            android:src="@drawable/img_book_wallpaper"
            app:imageZoom="1.2"
            app:layout_constraintBottom_toTopOf="@id/text_view_book_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_60"
            android:background="@drawable/gradient_background"
            app:layout_constraintBottom_toTopOf="@+id/text_view_book_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/image_view_book"
            android:layout_width="@dimen/width_120"
            android:layout_height="@dimen/height_180"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_48"
            android:elevation="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_book_wallpaper"
            app:layout_constraintBottom_toTopOf="@id/text_view_book_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:roundPercent="0.3" />

        <TextView
            android:id="@+id/text_view_book_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_book"
            tools:text="@string/book_name" />

        <TextView
            android:id="@+id/text_view_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_name"
            tools:text="@string/author_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:orientation="horizontal"
            android:padding="@dimen/padding_8"
            app:cardBackgroundColor="@color/colorBackgroundLight"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_author">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_languages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_14"
                    tools:text="English" />

                <TextView
                    android:id="@+id/text_view_download_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_14"
                    tools:text="Pages: 242" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_info"
            app:layout_constraintBottom_toTopOf="@id/buttons"
            tools:text="Book description..." />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_24"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorButton"
                android:src="@drawable/ic_favorite_border"
                android:layout_marginEnd="@dimen/margin_8"
                app:tint="@color/colorBackgroundLight" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorButton"
                android:src="@drawable/ic_bookmark_border"
                android:layout_marginHorizontal="@dimen/margin_8"
                app:tint="@color/colorBackgroundLight" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_read_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorButton"
                android:src="@drawable/ic_check"
                android:layout_marginHorizontal="@dimen/margin_8"
                app:tint="@color/colorBackgroundLight" />

            <Button
                android:id="@+id/button_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorButton"
                android:text="@string/read_button"
                android:textColor="@color/colorBackgroundLight"
                android:layout_marginStart="@dimen/margin_8" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
